--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="Viewport" content="width=device-width">
     <link rel="stylesheet" href="StyleOSebe.css">
+    <link rel="stylesheet" href="animate.css">
     <title>hisEx</title>
 </head>
 <body>
@@ -38,17 +39,17 @@
         <option> 24 билет</option>
         <option> 25 билет</option>
     </select>
-    <a href=" https://drfenomen.github.io/ExamHisGlav/" class="Nav_Item1">Главная</a>
-    <a href="https://drfenomen.github.io/ExamHisInfoSite/" class="Nav_Item2"> Информация о сайте</a>
-    <a href="#" class="Nav_Item3">О себе</a>
+    <a href="/ExamHisGlav/" class="Nav_Item1">Главная</a>
+    <a href="/ExamHisInfoSite/" class="Nav_Item2"> Информация о сайте</a>
+    <a href="/ExamHisOSebe/" class="Nav_Item3">О себе</a>
 </nav>
-<div class="greeting"><span>Привет!</span></div>
-<div class="Name"><span>Я Тимофей и я создатель этого сайта!</span></div>
-<div class="Dream"><span>Я всегда мечтал решать проблемы людей!
+<div  class=" greeting wow bounceInRight" data-wow-duration="1s"><span>Привет!</span></div>
+<div class="Name wow bounceInRight" data-wow-duration="2s"><span>Я Тимофей и я создатель этого сайта!</span></div>
+<div class="Dream wow bounceInLeft" data-wow-duration="2s"><span>Я всегда мечтал решать проблемы людей!
 Именно поэтому я создал сайт который поможет вам подготовиться к экзамену по истории Беларуси.</span></div>
-<div class="Age"><span>Да мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
-<div class="Will"><span>И я очень хочу чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
-<footer>
+<div class="Age wow bounceInRight" data-wow-duration="2s"><span>Да мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
+<div class="Will wow bounceInLeft" data-wow-duration="2s"><span>И я очень хочу чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
+<footer class="wow bounceInLeft" data-wow-duration="1s">
     <ul>
         <li>inst:sdasda</li>
         <li>Tg:dadadasd</li>
@@ -56,5 +57,9 @@
         <li>phone number:+375 29 666 66-66</li>
     </ul>
 </footer>
+<script src="wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 </body>
 </html>
