--- a/index.html
+++ b/index.html
@@ -11,34 +11,9 @@
 <nav>
 
 
-    <select class="Nav_Selection" >
-        <option aria-disabled class="Select_Start">выберите билет</option>
-        <option> 1 билет</option>
-        <option> 2 билет</option>
-        <option> 3 билет</option>
-        <option> 4 билет</option>
-        <option> 5 билет</option>
-        <option> 6 билет</option>
-        <option> 7 билет</option>
-        <option> 8 билет</option>
-        <option> 9 билет</option>
-        <option> 10 билет</option>
-        <option> 11 билет</option>
-        <option> 12 билет</option>
-        <option> 13 билет</option>
-        <option> 14 билет</option>
-        <option> 15 билет</option>
-        <option> 16 билет</option>
-        <option> 17 билет</option>
-        <option> 18 билет</option>
-        <option> 19 билет</option>
-        <option> 20 билет</option>
-        <option> 21 билет</option>
-        <option> 22 билет</option>
-        <option> 23 билет</option>
-        <option> 24 билет</option>
-        <option> 25 билет</option>
-    </select>
+   <a  href="/ExamHisBilet/">
+    Перейти к билетам
+</a></div>
     <a href="/ExamHisGlav/" class="Nav_Item1">Главная</a>
     <a href="/ExamHisInfoSite/" class="Nav_Item2"> Информация о сайте</a>
     <a href="/ExamHisOSebe/" class="Nav_Item3">О себе</a>
