--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="Viewport" content="width=device-width">
     <link rel="stylesheet" href="StyleOSebe.css">
     <link rel="stylesheet" href="animate.css">
-    <title>hisEx</title>
+    <title>ExamHis</title>
 </head>
 <body>
 <nav>
