--- a/index.html
+++ b/index.html
@@ -18,23 +18,19 @@
     <a href="/ExamHisInfoSite/" class="Nav_Item2"> Информация о сайте</a>
     <a href="/ExamHisOSebe/" class="Nav_Item3">О себе</a>
 </nav>
-<div  class=" greeting wow bounceInRight" data-wow-duration="1s"><span>Привет!</span></div>
-<div class="Name wow bounceInRight" data-wow-duration="2s"><span>Я Тимофей и я создатель этого сайта!</span></div>
-<div class="Dream wow bounceInLeft" data-wow-duration="2s"><span>Я всегда мечтал решать проблемы людей!
+<div  class=" greeting" data-wow-duration="1s"><span>Привет!</span></div>
+<div class="Name" data-wow-duration="2s"><span>Я Тимофей и я создатель этого сайта!</span></div>
+<div class="Dream" data-wow-duration="2s"><span>Я всегда мечтал решать проблемы людей!
 Именно поэтому я создал сайт который поможет вам подготовиться к экзамену по истории Беларуси.</span></div>
-<div class="Age wow bounceInRight" data-wow-duration="2s"><span>Да мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
-<div class="Will wow bounceInLeft" data-wow-duration="2s"><span>И я очень хочу чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
-<footer class="wow bounceInLeft" data-wow-duration="1s">
+<div class="Age" data-wow-duration="2s"><span>Да мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
+<div class="Will" data-wow-duration="2s"><span>И я очень хочу чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
+<footer>
     <ul>
-        <li>inst:sdasda</li>
-        <li>Tg:dadadasd</li>
-        <li>WK:dadasdasd</li>
-        <li>phone number:+375 29 666 66-66</li>
+        <li>inst:drfenome.n</li>
+        <li>Tg:@DrFenom</li>
+        <li>WK:@id672711419</li>
+        <li>phone number:+375 29 844 08-30</li>
     </ul>
 </footer>
-<script src="wow.min.js"></script>
-<script>
-    new WOW().init();
-</script>
 </body>
 </html>
