--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 <div  class=" greeting" data-wow-duration="1s"><span>Привет!</span></div>
 <div class="Name" data-wow-duration="2s"><span>Я Тимофей и я создатель этого сайта!</span></div>
 <div class="Dream" data-wow-duration="2s"><span>Я всегда мечтал решать проблемы людей!
-Именно поэтому я создал сайт который поможет вам подготовиться к экзамену по истории Беларуси.</span></div>
-<div class="Age" data-wow-duration="2s"><span>Да мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
-<div class="Will" data-wow-duration="2s"><span>И я очень хочу чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
+Именно поэтому, я создал сайт, который поможет вам подготовиться к экзамену по истории Беларуси.</span></div>
+<div class="Age" data-wow-duration="2s"><span>Да, мне всего 14 лет, но это не помешала мне научиться сделать свой собственный сайт!</span></div>
+<div class="Will" data-wow-duration="2s"><span>И я очень хочу, чтобы люди всех возврастов учились в своей жизни чему-нибудь новому!</span></div>
 <footer>
     <ul>
         <li>inst:drfenome.n</li>
